# bjorn-rs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Cross.toml  Dockerfile.build  Makefile  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
deploy/: bjorn.service  install.sh
src/: error.rs  lib.rs  logging.rs  main.rs
src/actions/: mod.rs  scanning.rs  util.rs  vuln_scanner.rs
src/actions/brute_force/: ftp.rs  http_basic.rs  mod.rs  mongo.rs  mqtt.rs  postgres.rs  rdp.rs  redis.rs  smb.rs  snmp.rs  sql.rs  ssh.rs  telnet.rs  vnc.rs
src/actions/exfiltrate/: ftp.rs  http.rs  mod.rs  mongo.rs  mqtt.rs  postgres.rs  rdp.rs  redis.rs  smb.rs  snmp.rs  sql.rs  ssh.rs  telnet.rs
src/config/: mod.rs  paths.rs  settings.rs
src/display/: comments.rs  epd.rs  epd_v4.rs  mod.rs  renderer.rs  status_images.rs
src/llm/: bridge.rs  mod.rs  orchestrator.rs  tools.rs
src/orchestrator/: mod.rs  scheduling.rs  tests.rs
src/sentinel/: detection.rs  mod.rs  tests.rs
src/state/: app_state.rs  knowledge_base.rs  mod.rs
src/web/: handlers.rs  mod.rs  server.rs
tests/: web_handlers.rs
