[package]
name = "bjorn"
version = "1.0.0-alpha.2"
edition = "2024"
description = "Autonomous network scanning and vulnerability assessment tool for Raspberry Pi"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Database (knowledge base)
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Config hot-reload
arc-swap = "1"

# Random
rand = "0.9"

# Web server
axum = "0.8"
tower-http = { version = "0.6", features = ["fs", "compression-gzip", "cors"] }

# SSH client
russh = "0.58"

# FTP client
suppaftp = { version = "6", features = ["async-rustls"] }

# Display rendering
image = "0.25"
imageproc = "0.25"
ab_glyph = "0.2"

# GPIO/SPI for e-Paper (only compiles on Linux/Pi)
[target.'cfg(target_os = "linux")'.dependencies]
rppal = "0.22"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "z"     # Optimize for binary size (Pi Zero has limited storage)
lto = true
strip = true
codegen-units = 1
panic = "abort"
